@@ -45,8 +45,8 @@ setup(
         "pydantic == 1.7.3",
         "aiofiles >=0.5.0,<=0.6.0",
         "gunicorn == 20.0.4",
-        "rcsb.utils.io >= 0.97",
-        "rcsb.utils.chem >= 0.52",
+        "rcsb.utils.io >= 1.00",
+        "rcsb.utils.chem >= 0.62",
         "requests >=2.24.0,<3.0.0",
         "jinja2 >=2.11.2,<3.0.0",
         "python-multipart >=0.0.5,<0.0.6",
